--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "typescript-expo-apollo-boilerplatetypescript-expo-apollo-boilerplate",
-    "slug": "typescript-expo-apollo-boilerplate",
+    "name": "search-country-and-exchange-conversion",
+    "slug": "search-country-and-exchange-conversion",
     "privacy": "public",
     "sdkVersion": "36.0.0",
     "platforms": [
@@ -25,6 +25,7 @@
     ],
     "ios": {
       "supportsTablet": true
-    }
+    },
+    "description": "A sample test for Searching countries in the world and checking their exchange rate conversion equivalence in Naira"
   }
 }
