--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@react-navigation/native": "^5.0.0-alpha.20",
     "@react-navigation/stack": "^5.0.0-alpha.45",
     "apollo-link-schema": "^1.2.4",
+    "axios": "^0.21.0",
     "expo": "~36.0.0",
     "expo-asset": "~8.0.0",
     "expo-font": "~8.0.0",
